# cpp_learning

./: .gitignore  LICENSE  README.md
construction_destruction_func/: CMakeLists.txt
construction_destruction_func/inc/: Person.h
construction_destruction_func/src/: Person.cpp  main.cpp
